--- a/4-JS/index.html
+++ b/4-JS/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="/main.js"></script>  -->
-    <script src="script.js"></script> 
-    <title>3-dars</title>
+   <script src="./main.js"></script>
+    <title>4-dars</title>
+ 
 </head>
 <body>
-    <h1>Hello</h1>
+     <h1>Hello</h1>
+     
 </body>
 </html>
