--- a/4-JS/index.html
+++ b/4-JS/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <script src="./main.js"></script>
+   <script src="./arry.js"></script>
     <title>4-dars</title>
  
 </head>
 <body>
-     <h1>Hello</h1>
+     <h1>Array</h1>
      
 </body>
 </html>
