--- a/8-JS/index.html
+++ b/8-JS/index.html
@@ -10,14 +10,10 @@
     <h1 class="title">Hello1</h1>
     <h1 id="title2">Hello2</h1>
     <h1>Hello3</h1>
-    <h1>Hello4</h1>
-    <h1>Hello5</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rerum tempore qui obcaecati. Consequatur, ducimus nemo ut reiciendis doloribus soluta?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rerum tempore qui obcaecati. Consequatur, ducimus nemo ut reiciendis doloribus soluta?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rerum tempore qui obcaecati. Consequatur, ducimus nemo ut reiciendis doloribus soluta?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rerum tempore qui obcaecati. Consequatur, ducimus nemo ut reiciendis doloribus soluta?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rerum tempore qui obcaecati. Consequatur, ducimus nemo ut reiciendis doloribus soluta?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum rerum tempore qui obcaecati. Consequatur, ducimus nemo ut reiciendis doloribus soluta?</p>
+    <h1>Hello3</h1>
+    <h1>Hello3</h1>
+    <p class="titleClass"></p>
+ 
     <a href="">frilink</a>
     
     <script src="./main.js"></script>
