--- a/8-JS/index.html
+++ b/8-JS/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>8-dars</title>
+    <link rel="stylesheet" href="./style.css">
     
 </head>
 <body>
@@ -14,7 +15,7 @@
     <h1>Hello3</h1>
     <p class="titleClass"></p>
  
-    <a href="">frilink</a>
+    <a href=""></a>
     
     <script src="./main.js"></script>
 </body>
