added Arry from

--- a/11-JS/index.html
+++ b/11-JS/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <script src="./main.js"></script>
     <title>11-dars</title>
  
 </head>
 <body>
-     <h1>Hell2o</h1>
-     
+
+    <div>
+  <p>Lorem, ipsum dolor.</p>
+    <h1>Salom dunyo</h1>
+    <span>inline tag</span>
+    <h5>Heading</h5>    
+    </div>
+  
+   <script src="./main.js"></script>
 </body>
 </html>
