--- a/11-JS/index.html
+++ b/11-JS/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>11-dars</title>
+    <style>
+       .smth{
+        color: red;
+        background-color: black;
+       }
+
+    </style>
  
 </head>
 <body>
