--- a/11-JS/index.html
+++ b/11-JS/index.html
@@ -8,6 +8,10 @@
        .smth{
         color: red;
         background-color: black;
+        text-decoration: line-through;
+       }
+       a{
+        display: block;
        }
 
     </style>
@@ -20,6 +24,8 @@
     <h1>Salom dunyo</h1>
     <span>inline tag</span>
     <h5>Heading</h5>    
+
+    <button> Added </button>
     </div>
   
    <script src="./main.js"></script>
