--- a/13-JS/index.html
+++ b/13-JS/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./main.css" />
     <title>Document</title>
   </head>
   <body>
@@ -100,6 +100,6 @@
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
