--- a/13-JS/index.html
+++ b/13-JS/index.html
@@ -10,7 +10,10 @@
   <body>
     
     <h1>Inpusts</h1>
-    <h2>Hello</h2>
+    <h2>Hello</h2> 
+ 
+   <div></div>    
+
     <ul>
       <li>Buy a coffe</li>
       <li>Sell a banan</li>
