--- a/13-JS/index.html
+++ b/13-JS/index.html
@@ -19,6 +19,7 @@
       <li>Sell a banan</li>
       <li>Go to the Market</li>
     </ul>
+    <input type="text">
     <button>Add to Item</button>
     <br>
     <br>
