--- a/13-JS/index.html
+++ b/13-JS/index.html
@@ -10,7 +10,15 @@
   <body>
     
     <h1>Inpusts</h1>
-    <h2>Hello</h2> 
+   <form>
+  <input type="text" placeholder="Enten your username....."  name="username">
+   <button type="submit">Submit</button>
+
+   </form>
+  
+
+
+    <!-- <h2>Hello</h2> 
  
    <div></div>    
 
@@ -28,7 +36,7 @@
     <br>
     <br>
     <br>
-    <span></span>
+    <span></span> -->
 
 
 
