--- a/16-JS/index.html
+++ b/16-JS/index.html
@@ -7,10 +7,16 @@
     <link rel="stylesheet" href="./main.css" />
     <title>14-work</title>
   </head>
+  <style>
+    h1{
+      font-size: 90px;
+    }
+  </style>
+
   <body>
 
 <h1>Hello</h1>
 <div>The time</div>
-    <script src="./main.js"></script>
+    <script src="./storge.js"></script>
   </body>
 </html>
